crates/quarto-math/tests/integration/snapshots/integration__mathml__mathml__environments__multline_display.snap
---
source: crates/quarto-math/tests/integration/mathml.rs
expression: to_mathml(&n)
---
<math xmlns="http://www.w3.org/1998/Math/MathML" display="block"><semantics><mrow><mtable><mtr><mtd><mrow><mi>a</mi><mo>+</mo><mi>b</mi></mrow></mtd></mtr><mtr><mtd><mrow><mo>+</mo><mi>c</mi></mrow></mtd></mtr></mtable></mrow><annotation encoding="application/x-tex">\begin{multline}
a + b \\
+ c
\end{multline}</annotation></semantics></math>
